--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link rel="stylesheet" href="/dist/css/style.css">
 </head>
+
 <body>
+    <p>
+        scrivere uno script che presenti una form html con due campi nome e cognome e un pulsante che alla sua pressione
+        faccia stampare i primi 6 caratteri del codice fiscale,dove i primi tre sono le prime tre consonanti del
+        cognome,i
+        successivi tre sono le prime tre consonanti del nome.Si supponga che sia il cognome che il nome abbiano tre
+        consonanti.
+    </p>
+
+    <form action="">
+        <input type="text">
+    </form>
     
+
+
+
+
+    <script src="dist/css/main.js"></script>
+
 </body>
+
 </html>
