--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="shortcut icon" href="/dist/css/imgs/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="http://www.codicefiscaleonline.com/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
 </head>
 
 <body>
