--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calcolo Codice Fiscale</title>
 
-    <link rel="shortcut icon" href="/dist/css/imgs/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="http://www.codicefiscaleonline.com/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="dist/css/imgs/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.codicefiscaleonline.com/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="dist/css/style.css">
 </head>
 
