--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <strong>Mi scuso per il disagio.</strong>
     </div>
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="dist/js/main.js"></script>
     <script>
         window.onload = function () {
