--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calcolo Codice Fiscale</title>
 
     <link rel="shortcut icon" href="dist/css/imgs/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://www.codicefiscaleonline.com/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="//www.codicefiscaleonline.com/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="dist/css/style.css">
 </head>
 
