--- a/index.html
+++ b/index.html
@@ -252,15 +252,6 @@
         </div>
     </div>
 
-    <!-- <form action="" id="form">
-        <a href="#popup1">
-            <input type="submit" name="calcola" id="bottone-marco" value="Calcola il Codice Fiscale" class="form-input"
-                onclick="getInfo()">
-        </a>
-    </form> -->
-
-
-    <!-- Rimuovere a sito ultimato -->
     <form action="" id="form">
         <a onclick="$('#popup1').show()">
             <input type="button" name="calcola" id="bottone-marco" value="Calcola il Codice Fiscale" class="form-input"
@@ -274,7 +265,7 @@
             <!--Fatto-->
             <h2 class="popup-title">Codice Fiscale</h2>
             <a class="popup-close" href="#">&times;</a>
-            <div class="popup-result tab">
+            <div class="popup-result">
                 <strong id="popup-content">
                 </strong>
             </div>
