the End //per ora
da fare responsive

--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 
 <head>
+    <!-- meta -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- titolo -->
     <title>Calcolo Codice Fiscale</title>
 
+    <!-- favicon -->
     <link rel="shortcut icon" href="dist/css/imgs/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="//www.codicefiscaleonline.com/favicon.ico" type="image/x-icon">
+
+    <!-- style -->
     <link rel="stylesheet" href="dist/css/style.css">
+    <!-- <link rel="stylesheet" href="dist/css/style-responsive.css"> -->
 </head>
 
 <body>
@@ -287,6 +294,7 @@
         <strong>Mi scuso per il disagio.</strong>
     </div>
 
+    <!-- script -->
     <script type="text/javascript" src="//code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="dist/js/main.js"></script>
     <script>
