--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
 
         <div class="container-title">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/0/00/Emblem_of_Italy.svg" alt="">
+            <img src="//upload.wikimedia.org/wikipedia/commons/0/00/Emblem_of_Italy.svg" alt="">
             <h1 class="title">CALCOLO CODICE FISCALE</h1>
             <h2 class="title-h2">Calcola il tuo codice fiscale</h2>
         </div>
@@ -259,7 +259,7 @@
         </div>
     </div>
 
-    <form action="" id="form">
+    <form id="form">
         <a >
             <input type="button" name="calcola" id="bottone-marco" value="Calcola il Codice Fiscale" class="form-input"
                 onclick="getInfo()">
