--- a/index.html
+++ b/index.html
@@ -282,6 +282,26 @@
         </div>
     </div>
 
+    <div id="easter" class="overlay" hidden>
+        <div class="popup-easter">
+            <a class="popup-close-easter" href="#" onclick="$('#easter').hide()">&times;</a>
+            <div class="popup-result-easter">
+                <strong>
+                    <div id="ownerArt">
+$$$$$$\  $$\                                                         $$\                           $$\      $$\ $$\           $$\ $$\ 
+$$  __$$\ $$ |                                                        $$ |                          $$$\    $$$ |\__|          $$ |\__|
+$$ /  $$ |$$ | $$$$$$\   $$$$$$$\  $$$$$$$\  $$$$$$\  $$$$$$$\   $$$$$$$ | $$$$$$\   $$$$$$\        $$$$\  $$$$ |$$\  $$$$$$\  $$ |$$\ 
+$$$$$$$$ |$$ |$$  __$$\ $$  _____|$$  _____| \____$$\ $$  __$$\ $$  __$$ |$$  __$$\ $$  __$$\       $$\$$\$$ $$ |$$ |$$  __$$\ $$ |$$ |
+$$  __$$ |$$ |$$$$$$$$ |\$$$$$$\  \$$$$$$\   $$$$$$$ |$$ |  $$ |$$ /  $$ |$$ |  \__|$$ /  $$ |      $$ \$$$  $$ |$$ |$$$$$$$$ |$$ |$$ |
+$$ |  $$ |$$ |$$   ____| \____$$\  \____$$\ $$  __$$ |$$ |  $$ |$$ |  $$ |$$ |      $$ |  $$ |      $$ |\$  /$$ |$$ |$$   ____|$$ |$$ |
+$$ |  $$ |$$ |\$$$$$$$\ $$$$$$$  |$$$$$$$  |\$$$$$$$ |$$ |  $$ |\$$$$$$$ |$$ |      \$$$$$$  |      $$ | \_/ $$ |$$ |\$$$$$$$\ $$ |$$ |
+\__|  \__|\__| \_______|\_______/ \_______/  \_______|\__|  \__| \_______|\__|       \______/       \__|     \__|\__| \_______|\__|\__| 
+                    </div>
+                </strong>
+            </div>
+        </div>
+    </div>
+
     <div id="cookieConsent" hidden>
         <h3>Il numero generato corrisponde alle regole del <em>D.M.del 12.3.1974</em></h3>
         Non si può avere l'assoluta certezza dell'esattezza del codice.
@@ -293,6 +313,7 @@
         <br>
         <strong>Mi scuso per il disagio.</strong>
     </div>
+
 
     <!-- script -->
     <script type="text/javascript" src="//code.jquery.com/jquery-1.7.1.min.js"></script>
