--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
             <a class="popup-close-easter" href="#" onclick="$('#easter').hide()">&times;</a>
             <div class="popup-result-easter">
                 <strong>
+                    <!-- Don't work properly on linux -->
                     <div id="ownerArt">
 $$$$$$\  $$\                                                         $$\                           $$\      $$\ $$\           $$\ $$\ 
 $$  __$$\ $$ |                                                        $$ |                          $$$\    $$$ |\__|          $$ |\__|
