--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <!-- titolo -->
     <title>Calcolo Codice Fiscale</title>
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+    <script src="https://kit.fontawesome.com/8c55047497.js" crossorigin="anonymous"></script>
+
     <!-- favicon -->
     <link rel="shortcut icon" href="dist/css/imgs/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="//www.codicefiscaleonline.com/favicon.ico" type="image/x-icon">
@@ -17,9 +25,85 @@
     <!-- style -->
     <link rel="stylesheet" href="dist/css/style.css">
     <!-- <link rel="stylesheet" href="dist/css/style-responsive.css"> -->
+    
+    <style>
+        /* modal */
+        .modal-btn {
+            color: #fff;
+            background-color: #029b00!important;
+            border-color: #029b00!important;
+            display: inline-block;
+            font-weight: 400;
+            text-align: center;
+            vertical-align: middle;
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            background-color: transparent;
+            border: 1px solid transparent;
+            padding: .375rem .75rem;
+            font-size: 1rem;
+            line-height: 1.5;
+            border-radius: .25rem;
+            transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        }
+        .modal-btn:hover {
+            opacity: .8;
+            text-decoration: none;
+            color: rgb(255, 255, 255);
+        }
+        .modal-link {
+            text-decoration: none;        
+            color: #029b00;
+            text-decoration: none;
+            padding-bottom: .05em;
+            border-bottom-width: 1px;
+            border-bottom-style: solid;
+            transition: border-color .15s ease-out,color .15s ease-out;
+        }
+        .modal-link:hover {
+            text-decoration: none;
+            color: rgba(2, 155, 0,.6);
+            border-color: rgba(2, 155, 0,.15);
+        }
+        .no-select {
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+            -moz-user-select: none; /* Old versions of Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+        }
+    </style>
 </head>
 
 <body>
+
+    <!-- Modal Change website -->
+    <div class="modal fade no-select" id="myModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModal" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header pb-0 float-right" style="border: none;">
+            <button type="button" class="close p-2" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true" class="changeLanClose">&times;</span>
+            </button>
+            </div>
+            <div class="modal-header m-auto p-0" style="border: none;">
+            <h5 class="modal-title changeLanTitle" id="exampleModalLongTitle"><span style="color: #029b00"><i
+                    class="fas fa-info fa-2x"></i></span></h5>
+            </div>
+            <div class="modal-body text-justify">
+                Questa sito non è più supportato dallo <a class="modal-link" href="https://alessandromieli.ga/">sviluppatore</a> che però ne ha creato un altro molto più bello e funzionale, ti invito a utilizzare
+                quello e mi scuso per il disagio <i class="fas fa-peace"></i>
+            </div>
+            <div class="modal-footer m-auto pt-0" style="border: none;">
+            <a type="button" class="color modal-btn mx-auto" href="https://www.codicefiscaleonline.tk/">Portami lì!</a>
+            </div>
+        </div>
+        </div>
+    </div>
 
     <div class="container">
 
@@ -316,11 +400,23 @@ $$ |  $$ |$$ |\$$$$$$$\ $$$$$$$  |$$$$$$$  |\$$$$$$$ |$$ |  $$ |\$$$$$$$ |$$ |  
         <strong>Mi scuso per il disagio.</strong>
     </div>
 
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 
     <!-- script -->
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.7.1.min.js"></script>
+    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.7.1.min.js"></script> -->
     <script src="dist/js/main.js"></script>
     <script>
+        $(window).on('load', function () {
+            $('#myModal').modal('toggle');
+        });
         window.onload = function () {
             $.getJSON("data/comuni.json", function (data) {
                 $.each(data, function (key, val) {
