--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                     class="fas fa-info fa-2x"></i></span></h5>
             </div>
             <div class="modal-body text-justify">
-                Questa sito non è più supportato dallo <a class="modal-link" href="https://alessandromieli.ga/">sviluppatore</a> che però ne ha creato un altro molto più bello e funzionale, ti invito a utilizzare
+                Questa sito non è più supportato dallo <a class="modal-link" href="https://alessandromieli.it/">sviluppatore</a> che però ne ha creato un altro molto più bello e funzionale, ti invito a utilizzare
                 quello e mi scuso per il disagio <i class="fas fa-peace"></i>
             </div>
             <div class="modal-footer m-auto pt-0" style="border: none;">
-            <a type="button" class="color modal-btn mx-auto" href="https://www.codicefiscaleonline.tk/">Portami lì!</a>
+            <a type="button" class="color modal-btn mx-auto" href="https://codicefiscale.alessandromieli.it/">Portami lì!</a>
             </div>
         </div>
         </div>
